terraform/modules/ec2_instance/calico/conntrack/allowGlobalOutbound.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-outbound
spec:
  selector: all()
  order: 200
  egress:
    - action: Allow
