terraform/modules/ec2_instance/calico/conntrack/noConnTrack.yml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: access-nginx-on-host-network
spec:
  selector: memcached == 'server'
  applyOnForward: true
  ingress:
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 80
  egress:
    - action: Allow
---
apiVersion: v1
kind: Pod
metadata:
  name: memcached-server-sim
  labels:
    memcached: server
spec:
  hostNetwork: true
  containers:
  - name: hello-world
    image: nginxdemos/hello
    ports:
    - containerPort: 80
  nodeName: node0.k8.local
